name:                haskell-scheme
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jmgreen12/haskell-scheme#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable haskell-scheme
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       SchemeParser
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, parsec, hspec

library
  hs-source-dirs: src
  ghc-options: -Wall
  build-depends: base >= 4.7 && < 5, parsec
  exposed-modules: SchemeParser
  default-language: Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  ghc-options: -Wall
  build-depends:
      base == 4.*
    , haskell-scheme
    , parsec
    , hspec == 2.*
  other-modules: SchemeParserSpec
  default-language: Haskell2010